--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+
+    <hr>
+    <hr>
+
+    <p>The world is beautiful!</p>
+
+
     
 </body>
 </html>
