Added type selector

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
     <p>The world is beautiful!</p>
 
+    <label for="name">Name</label>
+    <input type="text" id="name" name="fullname" placeholder="First and Last name">
+
+    
+
 
     
 </body>
